# PrivateTrace-CoreCPP

./: CMakeLists.txt  FileTest.cpp  Global.hpp  IntervalCount.cpp  LocationTest.cpp  PosPPtest.cpp  README.md  SantiTest.cpp  main.cpp
Area/: Circle.hpp  EncryptedCircle.hpp  EncryptedPoint.hpp  Point.hpp
Data/: EncTmLocData.hpp  EncTrajectory.hpp  TimeLocationData.hpp  Trajectory.hpp  TrajectoryReader.hpp
Geo/: Geo.hpp  Location.hpp
Protocol/: CCircleTree.hpp  ConcentricCircles.hpp  EncSquareDistance.hpp  Prune.h
Utils/: Pair.hpp  Tuple.hpp  Utils.hpp  threadPool.h
